--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
     
-    <title>DYCI Connect - Student Hub</title>
+    <title>DYCI Connect - Student Handbook</title>
   </head>
   <body>
     <div id="root"></div>
